actualize mis datos

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           <div class="row">
             <div class="col-md-6">
               <p>
-                <strong><i class="fas fa-id-card"></i> Nombre:</strong> {tu
-                nombre}
+                <strong><i class="fas fa-id-card"></i> Nombre:</strong> Darian Moreno
+        
               </p>
               <p>
                 <strong><i class="fas fa-envelope"></i> Email:</strong>
@@ -83,7 +83,7 @@
                   href="mailto: {tu correo}"
                   aria-label="Enviar correo a {tu nombre}"
                 >
-                  {tu correo}
+                  darianmorenis@gmail.com
                 </a>
               </p>
             </div>
@@ -94,7 +94,7 @@
                   href="https://github.com/{tu_usuario_github}"
                   target="_blank"
                   aria-label="Perfil de GitHub de {tu nombre}"
-                  >Github.com/{tu_usuario_github}</a
+                  >Github.com/Darianpmorenoa</a
                 >
               </p>
               <p>
